Update for CMTN CTO position

--- a/index.html
+++ b/index.html
@@ -98,16 +98,17 @@
 			}
 
 			#skills ul {
-				list-style: none;
-				padding: 0;
+				/* list-style: none;
+				padding: 0; */
+				padding: 1em 0 1em 1.5em;
 				margin: 0;
 			}
-			#skills li {
+			/* #skills li {
 				display: inline;
 			}
 			#skills li:not(:last-child)::after {
 				content: " • ";
-			}
+			} */
 
 			#interests li {
 				text-align: center;
@@ -188,8 +189,8 @@
 						/>
 						<h1 style="text-transform: uppercase; margin: 0.25em auto">Benjamin Davidson</h1>
 						<p style="margin: 1em">
-							Versatile, cutting-edge full-stack developer, analyst, and administrator with 20 years IT
-							experience and 12 years management experience
+							Versatile leader with 20 years of IT experience spanning development, systems administration,
+							business intelligence, and management
 						</p>
 
 						<section
@@ -238,46 +239,22 @@
 							Skills
 						</h2>
 
-						<h3>Languages</h3>
 						<ul>
-							<li>JS/TS</li>
-							<li>C#</li>
-							<li>Java</li>
-							<li>SQL</li>
-							<li>NoSQL</li>
-							<li>Python</li>
-							<li>SCSS</li>
-							<li>SVG</li>
-						</ul>
-
-						<h3>Tooling</h3>
-						<ul>
-							<li>React/Redux</li>
-							<li>jQuery</li>
-							<li>D3</li>
-							<li>Regex</li>
-							<li>Vim</li>
-							<li>PowerQuery</li>
-							<li>pandas</li>
-							<li>Ionic</li>
-							<li>Material</li>
-							<li>Mapbox</li>
-							<li>GraphQL</li>
-							<li>Git</li>
-						</ul>
-
-						<h3>Infrastructure</h3>
-						<ul>
-							<li>PostgreSQL/PostGIS</li>
-							<li>MSSQL</li>
-							<li>nginx</li>
-							<li>Docker</li>
-							<li>Linux</li>
-							<li>Hyper-V</li>
-							<li>PowerShell</li>
-							<li>AWS</li>
-							<li>Azure</li>
-							<li>TCP/IP</li>
+							<li>Strategic IT leadership</li>
+							<li>Cross-functional collaboration</li>
+							<li>Agile project management</li>
+							<li>Business process automation</li>
+							<li>Business intelligence</li>
+							<li>IT infrastructure management</li>
+							<li>IT automation</li>
+							<li>Microsoft 365 administration</li>
+							<li>Database administration</li>
+							<li>Cybersecurity &amp; risk management</li>
+							<li>Vendor and contract negotiation</li>
+							<li>Software development</li>
+							<li>Budget management</li>
+							<li>Change management</li>
+							<li>Public speaking</li>
 						</ul>
 					</section>
 
@@ -346,17 +323,7 @@
 											d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
 										/>
 									</svg>
-									<figcaption>Ultimate</figcaption>
-								</figure>
-							</li>
-							<li class="secondary">
-								<figure>
-									<svg viewBox="0 0 640 512">
-										<path
-											d="M632 240h-24v-96c0-26.5-21.5-48-48-48h-32c-5.6 0-11 1.2-16 2.9V80c0-26.5-21.5-48-48-48h-32c-26.5 0-48 21.5-48 48v160H256V80c0-26.5-21.5-48-48-48h-32c-26.5 0-48 21.5-48 48v18.9c-5-1.8-10.4-2.9-16-2.9H80c-26.5 0-48 21.5-48 48v96H8c-4.4 0-8 3.6-8 8v16c0 4.4 3.6 8 8 8h24v96c0 26.5 21.5 48 48 48h32c5.6 0 11-1.2 16-2.9V432c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V272h128v160c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48v-18.9c5 1.8 10.4 2.9 16 2.9h32c26.5 0 48-21.5 48-48v-96h24c4.4 0 8-3.6 8-8v-16c0-4.4-3.6-8-8-8zM112 384H80c-8.8 0-16-7.2-16-16V144c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v224c0 8.8-7.2 16-16 16zm112 48c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v352zm256 0c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v352zm96-64c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16V144c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v224z"
-										/>
-									</svg>
-									<figcaption>Powerlifting</figcaption>
+									<figcaption>Ultimate Frisbee</figcaption>
 								</figure>
 							</li>
 							<li>
@@ -369,7 +336,7 @@
 									<figcaption>Photography</figcaption>
 								</figure>
 							</li>
-							<li>
+							<li class="secondary">
 								<figure>
 									<svg viewBox="0 0 512 512">
 										<path
@@ -379,7 +346,7 @@
 									<figcaption>Film&nbsp;Theory</figcaption>
 								</figure>
 							</li>
-							<li class="secondary">
+							<li>
 								<figure>
 									<svg viewBox="0 0 448 512">
 										<path
@@ -387,7 +354,7 @@
 										/>
 									</svg>
 								</figure>
-								<figcaption>Debate</figcaption>
+								<figcaption>Public Speaking</figcaption>
 							</li>
 							<li>
 								<figure>
@@ -399,6 +366,16 @@
 									<figcaption>Carpentry</figcaption>
 								</figure>
 							</li>
+							<li class="secondary">
+								<figure>
+									<svg viewBox="0 0 640 512">
+										<path
+											d="M632 240h-24v-96c0-26.5-21.5-48-48-48h-32c-5.6 0-11 1.2-16 2.9V80c0-26.5-21.5-48-48-48h-32c-26.5 0-48 21.5-48 48v160H256V80c0-26.5-21.5-48-48-48h-32c-26.5 0-48 21.5-48 48v18.9c-5-1.8-10.4-2.9-16-2.9H80c-26.5 0-48 21.5-48 48v96H8c-4.4 0-8 3.6-8 8v16c0 4.4 3.6 8 8 8h24v96c0 26.5 21.5 48 48 48h32c5.6 0 11-1.2 16-2.9V432c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V272h128v160c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48v-18.9c5 1.8 10.4 2.9 16 2.9h32c26.5 0 48-21.5 48-48v-96h24c4.4 0 8-3.6 8-8v-16c0-4.4-3.6-8-8-8zM112 384H80c-8.8 0-16-7.2-16-16V144c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v224c0 8.8-7.2 16-16 16zm112 48c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v352zm256 0c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v352zm96-64c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16V144c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v224z"
+										/>
+									</svg>
+									<figcaption>Powerlifting</figcaption>
+								</figure>
+							</li>
 						</ul>
 					</section>
 				</article>
@@ -406,25 +383,46 @@
 
 			<section id="career" style="width: 65vw; padding: 1em">
 				<header>
-					<h2>IT Manager / Developer</h2>
+					<h2>IT Director</h2>
 					<p>2020–Present, Emil Anderson Group</p>
 				</header>
 				<ul>
 					<li>
-						Rapidly adapted Nechako Group <em>business intelligence tooling</em> to adapt to Emil Anderson's
-						incompatible software stack
-					</li>
-					<li><em>Assisted third party developers</em> with custom <em>Angular</em> timecard app</li>
-					<li>
-						Implemented PostGIS <em>geospacial error correction</em> for company work reporting,
-						<em>saving dozens of hours per month</em>
-						of manual review and correction while improving accuracy and reducing data entry requirements
+						Established internal technology services department,
+						<em>driving ticket volume and first response time both down by 70%</em> despite a 15% increase in
+						users, at a net savings after <em>renogiating MSP contracts</em>
 					</li>
 					<li>
-						Introduced a custom web GIS dashboard with <em>WebGL-accelerated visuals</em> of highway patrols over
-						thousands of road segments, and <em>containerized</em> <em>GraphQL</em> backend amalgamating data from
-						three GPS tracking APIs, Environment Canada, DriveBC, iMapBC, and road/weather sensors
+						Lead development and launch of <em>company intranet</em> with over
+						<em>80% weekly user readership</em> and daily contributions from across the organization
 					</li>
+					<li>
+						Established an org-wide <em>automated onboarding/offboarding</em> workflow impacting safety, quality
+						management, equipment, IT, HR, and payroll teams
+					</li>
+					<li>
+						<em>Launched an HR Information System</em>, streamlining recruitment processes and introducing
+						extensive new analytics by rebuilding historical datasets ported from 25 years of payroll datasets
+						across multiple legacy ERPs
+					</li>
+					<li>
+						Rapidly adapted Nechako Group <em>business intelligence tooling</em> to Emil Anderson's incompatible
+						software stack
+					</li>
+					<li>
+						Managed <em>migration of headquarters infrastructure</em> to new facility within a three-hour
+						scheduled migration window, with no disruption to operations
+					</li>
+					<li>
+						<em>Retained cyberinsurance coverage</em> after establishing new multifactor authentication systems, a
+						disaster recovery and business continuity strategy, and distributed backup systems, and passing a
+						third-party cybersecurity review
+					</li>
+					<li>
+						Key contributor to team that bid and won contracts in excess of <em>$100,000,000</em>, providing
+						geospecial data analysis and developing customer-facing interactive dashboards
+					</li>
+					<li>Report weekly to C-suite</li>
 				</ul>
 
 				<header>
@@ -436,18 +434,17 @@
 						Lead writer and team lead that bid and won core business contracts in excess of <em>$100,000,000</em>
 					</li>
 					<li>
-						Wrote <em>offline-first</em>, <em>mobile-friendly</em> progressive web applications to aid with work
-						reporting, mapping, and road/weather condition monitoring
+						<em>Wrote custom desktop/mobile applications</em> to aid with work reporting, mapping, and
+						road/weather condition monitoring
 					</li>
 					<li>
-						Paired dashcam footage with GPS trackers to produce map-based point and click recall of arbitrary
-						footage, including a <em>Python</em> daemon to automatically download and recompress bulk fleet
-						footage over wifi
+						Automated wifi download of fleet dashcams with second-precision GPS, enabling interactive map access
+						to latest footage to monitor changes in road conditions
 					</li>
 					<li>
-						Developed and/or redesigned reports using <em>Excel</em>, <em>low-code</em> form builders,
-						<em>D3.js</em>, <em>PowerQuery</em>, <em>pandas</em>, and other analytics technologies to assist in
-						finance, equipment monitoring and maintenance, climate forecasting and storm tracking
+						Developed and/or redesigned reports using <em>Excel</em>, <em>PowerQuery</em>, <em>low-code</em> form
+						builders, <em>D3.js</em>, <em>pandas</em>, and other analytics technologies to assist in finance,
+						equipment monitoring and maintenance, climate forecasting and storm tracking
 					</li>
 					<li>
 						Provided all support and administration for complex 50 user environment spread across 6 remote sites
@@ -462,9 +459,10 @@
 				</header>
 				<ul>
 					<li>Managed six-figure annual technology budget</li>
-					<li>Independently supported <em>over 100 users</em> across 9 locations</li>
-					<li>Developed <em>Postgres/Access</em> databases and assisted in developing government websites</li>
+					<li><em>Independently supported over 100 users</em> across 9 locations</li>
+					<li>Developed Postgres/Access databases and assisted in developing government websites</li>
 					<li>Virtualized, consolidated and upgraded all servers</li>
+					<li>Transitioned desktops to Windows 7</li>
 					<li>Lead installation of large office Ethernet rewiring</li>
 				</ul>
 
@@ -495,7 +493,7 @@
 					<p>2002-2005 Electronic Futures AVU</p>
 				</header>
 				<ul>
-					<li>Created store website and <em>PHP</em>-based order and staff tracking systems</li>
+					<li>Created store website and order and staff tracking systems</li>
 					<li>Created automated accounting templates and marketing materials</li>
 				</ul>
 			</section>
