--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 					<li>
 						Established internal technology services department,
 						<em>driving ticket volume and first response time both down by 70%</em> despite a 15% increase in
-						users, at a net savings after <em>renogiating MSP contracts</em>
+						users, at a net savings after <em>renegotiating MSP contracts</em>
 					</li>
 					<li>
 						Lead development and launch of <em>company intranet</em> with over
@@ -408,6 +408,9 @@
 					<li>
 						Rapidly adapted Nechako Group <em>business intelligence tooling</em> to Emil Anderson's incompatible
 						software stack
+					</li>
+					<li>
+						Deployed <em>>mobile device management</em> software, automating app deployment and device setup tasks
 					</li>
 					<li>
 						Managed <em>migration of headquarters infrastructure</em> to new facility within a three-hour
