--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
 				height: 2em;
 			}
 
+			#references p {
+				margin-top: 0.5em;
+			}
+
 			#career {
 				margin: 1em 1em 1em 2em;
 				border-left: 2px solid var(--dark);
@@ -249,8 +253,8 @@
 							<li>IT automation</li>
 							<li>Microsoft 365 administration</li>
 							<li>Database administration</li>
-							<li>Cybersecurity &amp; risk management</li>
-							<li>Vendor and contract negotiation</li>
+							<li>Cybersecurity</li>
+							<li>Procurement</li>
 							<li>Software development</li>
 							<li>Budget management</li>
 							<li>Change management</li>
@@ -288,7 +292,19 @@
 						</p>
 					</section>
 
-					<section id="interests">
+					<section id="references">
+						<h2>
+							<svg viewBox="0 0 576 512">
+								<path
+									d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
+								/>
+							</svg>
+							References
+						</h2>
+						<p>Available upon request</p>
+					</section>
+
+					<!-- <section id="interests">
 						<h2>
 							<svg viewBox="0 0 320 512">
 								<path
@@ -377,7 +393,7 @@
 								</figure>
 							</li>
 						</ul>
-					</section>
+					</section> -->
 				</article>
 			</section>
 
@@ -389,8 +405,8 @@
 				<ul>
 					<li>
 						Established internal technology services department,
-						<em>driving ticket volume and first response time both down by 70%</em> despite a 15% increase in
-						users, at a net savings after <em>renegotiating MSP contracts</em>
+						<em>reducing ticket volume and first response time each by 70%</em> despite a 15% increase in users,
+						<em>at a net savings</em> after renegotiating MSP contracts
 					</li>
 					<li>
 						Lead development and launch of <em>company intranet</em> with over
@@ -401,31 +417,26 @@
 						management, equipment, IT, HR, and payroll teams
 					</li>
 					<li>
-						<em>Launched an HR Information System</em>, streamlining recruitment processes and introducing
-						extensive new analytics by rebuilding historical datasets ported from 25 years of payroll datasets
-						across multiple legacy ERPs
+						<em>Launched an HR Information System</em>, streamlining recruitment and enabling analytics via
+						reconstruction of 25 years of legacy ERP datasets
 					</li>
+					<li>Enhanced, automated, and improved error-checking of many client-facing reports</li>
 					<li>
-						Rapidly adapted Nechako Group <em>business intelligence tooling</em> to Emil Anderson's incompatible
-						software stack
-					</li>
-					<li>
-						Deployed <em>>mobile device management</em> software, automating app deployment and device setup tasks
+						Deployed <em>mobile device management</em> software, automating app deployment and device setup tasks
 					</li>
 					<li>
 						Managed <em>migration of headquarters infrastructure</em> to new facility within a three-hour
 						scheduled migration window, with no disruption to operations
 					</li>
 					<li>
-						<em>Retained cyberinsurance coverage</em> after establishing new multifactor authentication systems, a
-						disaster recovery and business continuity strategy, and distributed backup systems, and passing a
-						third-party cybersecurity review
+						<em>Retained cyberinsurance coverage</em> after deploying multifactor authentication, a disaster
+						recovery/continuity strategy, and distributed backup systems, and passing an external cybersecurity
+						review
 					</li>
-					<li>
-						Key contributor to team that bid and won contracts in excess of <em>$100,000,000</em>, providing
-						geospecial data analysis and developing customer-facing interactive dashboards
-					</li>
-					<li>Report weekly to C-suite</li>
+					<!-- <li>
+						Key contributor to team that won contracts of <em>$100,000,000</em>, providing geospecial data
+						analysis and GIS dashboards
+					</li> -->
 				</ul>
 
 				<header>
@@ -433,20 +444,15 @@
 					<p>2013–2020 Nechako Group of Companies</p>
 				</header>
 				<ul>
-					<li>
-						Lead writer and team lead that bid and won core business contracts in excess of <em>$100,000,000</em>
-					</li>
+					<li>Lead writer and team lead in bids awarded over <em>$100,000,000</em></li>
 					<li>
 						<em>Wrote custom desktop/mobile applications</em> to aid with work reporting, mapping, and
-						road/weather condition monitoring
-					</li>
-					<li>
-						Automated wifi download of fleet dashcams with second-precision GPS, enabling interactive map access
-						to latest footage to monitor changes in road conditions
+						road/weather condition monitoring, which featured advanced GIS tooling, IoT hardware, and video
+						processing
 					</li>
 					<li>
 						Developed and/or redesigned reports using <em>Excel</em>, <em>PowerQuery</em>, <em>low-code</em> form
-						builders, <em>D3.js</em>, <em>pandas</em>, and other analytics technologies to assist in finance,
+						builders, <em>D3</em>, <em>pandas</em>, and other analytics technologies to assist in finance,
 						equipment monitoring and maintenance, climate forecasting and storm tracking
 					</li>
 					<li>
@@ -461,15 +467,16 @@
 					<p>2009–2013 Nisga'a Lisims Government</p>
 				</header>
 				<ul>
-					<li>Managed six-figure annual technology budget</li>
 					<li><em>Independently supported over 100 users</em> across 9 locations</li>
-					<li>Developed Postgres/Access databases and assisted in developing government websites</li>
-					<li>Virtualized, consolidated and upgraded all servers</li>
+					<li>Managed six-figure annual technology budget</li>
+					<li>Developed new Nisga'a citizenship database</li>
+					<!-- <li>Part of team for Nisga'a Lisims website redesign</li> -->
+					<li>Virtualized and upgraded servers</li>
 					<li>Transitioned desktops to Windows 7</li>
-					<li>Lead installation of large office Ethernet rewiring</li>
+					<li>Lead rewiring of headquarters' ethernet</li>
 				</ul>
 
-				<header>
+				<!-- <header>
 					<h2>IT Consultant / Web Developer</h2>
 					<p>2006–2008 TheBenD Software Solutions</p>
 				</header>
@@ -477,7 +484,7 @@
 					<li>
 						Produced websites, small applications, office templates and marketing materials for small businesses
 					</li>
-				</ul>
+				</ul> -->
 
 				<header>
 					<h2>Systems Administrator, Web Developer</h2>
@@ -485,10 +492,7 @@
 				</header>
 				<ul>
 					<li>Managed web, email, file and database servers</li>
-					<li>
-						Produced websites and integrated content management systems including <em>WordPress</em> and
-						<em>Drupal</em>
-					</li>
+					<li>Designed websites integrated <em>WordPress</em> and Drupal</li>
 				</ul>
 
 				<header>
