--- a/index.html
+++ b/index.html
@@ -110,14 +110,26 @@
 				content: " • ";
 			} */
 
-			#interests li {
+			/* #interests li {
 				text-align: center;
 				display: block;
 				margin: 0.5em;
+			} */
+
+			#interests ul {
+				list-style: none;
+				padding: 0;
+				margin-top: 0.75em;
 			}
-			#interests li svg {
+			#interests li {
+				display: inline;
+			}
+			#interests li:not(:last-child)::after {
+				content: " • ";
+			}
+			/* #interests li svg {
 				height: 2em;
-			}
+			} */
 
 			#references p {
 				margin-top: 0.5em;
@@ -258,7 +270,7 @@
 							<li>Software development</li>
 							<li>Budget management</li>
 							<li>Change management</li>
-							<li>Public speaking</li>
+							<li>Seminars and public speaking</li>
 						</ul>
 					</section>
 
@@ -292,19 +304,7 @@
 						</p>
 					</section>
 
-					<section id="references">
-						<h2>
-							<svg viewBox="0 0 576 512">
-								<path
-									d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
-								/>
-							</svg>
-							References
-						</h2>
-						<p>Available upon request</p>
-					</section>
-
-					<!-- <section id="interests">
+					<section id="interests">
 						<h2>
 							<svg viewBox="0 0 320 512">
 								<path
@@ -313,87 +313,15 @@
 							</svg>
 							Interests
 						</h2>
-						<ul
-							style="
-								list-style: none;
-								margin: 0.5em -1em 0 -1em;
-								padding: 0;
-								display: grid;
-								grid-template-columns: repeat(auto-fill, minmax(6em, 1fr));
-							"
-						>
-							<li>
-								<figure>
-									<svg viewBox="0 0 576 576">
-										<circle
-											cx="288"
-											cy="288"
-											r="268"
-											fill="transparent"
-											stroke-width="40"
-											stroke="currentColor"
-										/>
-										<path
-											transform="scale(0.7)"
-											style="transform-origin: center"
-											d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
-										/>
-									</svg>
-									<figcaption>Ultimate Frisbee</figcaption>
-								</figure>
-							</li>
-							<li>
-								<figure>
-									<svg viewBox="0 0 512 512">
-										<path
-											d="M256 408c-66.2 0-120-53.8-120-120s53.8-120 120-120 120 53.8 120 120-53.8 120-120 120zm0-208c-48.5 0-88 39.5-88 88s39.5 88 88 88 88-39.5 88-88-39.5-88-88-88zm-32 88c0-17.6 14.4-32 32-32 8.8 0 16-7.2 16-16s-7.2-16-16-16c-35.3 0-64 28.7-64 64 0 8.8 7.2 16 16 16s16-7.2 16-16zM324.3 64c3.3 0 6.3 2.1 7.5 5.2l22.1 58.8H464c8.8 0 16 7.2 16 16v288c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16V144c0-8.8 7.2-16 16-16h110.2l20.1-53.6c2.3-6.2 8.3-10.4 15-10.4h131m0-32h-131c-20 0-37.9 12.4-44.9 31.1L136 96H48c-26.5 0-48 21.5-48 48v288c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V144c0-26.5-21.5-48-48-48h-88l-14.3-38c-5.8-15.7-20.7-26-37.4-26z"
-										/>
-									</svg>
-									<figcaption>Photography</figcaption>
-								</figure>
-							</li>
-							<li class="secondary">
-								<figure>
-									<svg viewBox="0 0 512 512">
-										<path
-											d="M488 64h-8v20c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12V64H96v20c0 6.6-5.4 12-12 12H44c-6.6 0-12-5.4-12-12V64h-8C10.7 64 0 74.7 0 88v336c0 13.3 10.7 24 24 24h8v-20c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v20h320v-20c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v20h8c13.3 0 24-10.7 24-24V88c0-13.3-10.7-24-24-24zM96 372c0 6.6-5.4 12-12 12H44c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm0-96c0 6.6-5.4 12-12 12H44c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm0-96c0 6.6-5.4 12-12 12H44c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm288 208c0 6.6-5.4 12-12 12H140c-6.6 0-12-5.4-12-12v-96c0-6.6 5.4-12 12-12h232c6.6 0 12 5.4 12 12v96zm0-168c0 6.6-5.4 12-12 12H140c-6.6 0-12-5.4-12-12v-96c0-6.6 5.4-12 12-12h232c6.6 0 12 5.4 12 12v96zm96 152c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm0-96c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm0-96c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40z"
-										/>
-									</svg>
-									<figcaption>Film&nbsp;Theory</figcaption>
-								</figure>
-							</li>
-							<li>
-								<figure>
-									<svg viewBox="0 0 448 512">
-										<path
-											d="M440 160H96v-16c0-39.77 29.25-72.6 67.34-78.72C170.29 83.22 187.6 96 208 96h64c26.51 0 48-21.49 48-48S298.51 0 272 0h-64c-21.37 0-39.27 14.06-45.48 33.36C107.17 40.12 64 86.87 64 144v16H8c-4.42 0-8 3.58-8 8v16c0 4.42 3.58 8 8 8h56.09l.01 1.77L96 480H40c-4.42 0-8 3.58-8 8v16c0 4.42 3.58 8 8 8h368c4.42 0 8-3.58 8-8v-16c0-4.42-3.58-8-8-8h-55.9L384 192h56c4.42 0 8-3.58 8-8v-16c0-4.42-3.58-8-8-8zM208 32h64c8.82 0 16 7.18 16 16s-7.18 16-16 16h-64c-8.82 0-16-7.18-16-16s7.18-16 16-16zm112 448H127.91l-.01-1.77L96 192h255.9L320 480z"
-										/>
-									</svg>
-								</figure>
-								<figcaption>Public Speaking</figcaption>
-							</li>
-							<li>
-								<figure>
-									<svg viewBox="0 0 512 512">
-										<path
-											d="M501.65 452.08L59.91 10.35C52.76 3.2 43.97 0 35.35 0 17.31 0 0 14.01 0 35.17V476.9C0 496.29 15.71 512 35.1 512h441.73c31.27 0 46.93-37.8 24.82-59.92zm-21.96 26.01c-.79 1.91-2.04 1.91-2.86 1.91H35.1c-1.71 0-3.1-1.39-3.1-3.1V35.17c0-3.13 3.21-3.17 3.36-3.17.48 0 1.03.08 1.93.98l73.79 73.79-16.97 16.97c-3.12 3.12-3.12 8.19 0 11.31l11.32 11.31a7.98 7.98 0 0 0 5.66 2.34c2.05 0 4.09-.78 5.66-2.34l16.97-16.97 45.26 45.26-16.97 16.97c-3.12 3.12-3.12 8.19 0 11.31l11.31 11.31a7.98 7.98 0 0 0 5.66 2.34c2.05 0 4.1-.78 5.66-2.34l16.97-16.97 45.26 45.26-16.97 16.97c-3.12 3.12-3.12 8.19 0 11.31l11.31 11.31a7.98 7.98 0 0 0 5.66 2.34c2.05 0 4.1-.78 5.66-2.34l16.97-16.97 45.25 45.25-16.97 16.97c-3.12 3.12-3.12 8.19 0 11.31l11.31 11.31c1.56 1.56 3.61 2.34 5.66 2.34s4.09-.78 5.66-2.34l16.97-16.97 45.25 45.25-16.97 16.97c-3.12 3.12-3.12 8.19 0 11.31l11.31 11.31c1.56 1.56 3.61 2.34 5.66 2.34s4.09-.78 5.66-2.34l16.97-16.97 73.79 73.79c.55.61 1.44 1.5.64 3.41zM123.31 228.68c-4.56-4.56-11.5-5.95-17.44-3.47A15.999 15.999 0 0 0 96 239.99v160c0 8.84 7.16 16 16 16h160c6.47 0 12.31-3.89 14.78-9.88a16.048 16.048 0 0 0-3.47-17.44l-160-159.99zM128 383.99V278.62L233.37 384H128z"
-										/>
-									</svg>
-									<figcaption>Carpentry</figcaption>
-								</figure>
-							</li>
-							<li class="secondary">
-								<figure>
-									<svg viewBox="0 0 640 512">
-										<path
-											d="M632 240h-24v-96c0-26.5-21.5-48-48-48h-32c-5.6 0-11 1.2-16 2.9V80c0-26.5-21.5-48-48-48h-32c-26.5 0-48 21.5-48 48v160H256V80c0-26.5-21.5-48-48-48h-32c-26.5 0-48 21.5-48 48v18.9c-5-1.8-10.4-2.9-16-2.9H80c-26.5 0-48 21.5-48 48v96H8c-4.4 0-8 3.6-8 8v16c0 4.4 3.6 8 8 8h24v96c0 26.5 21.5 48 48 48h32c5.6 0 11-1.2 16-2.9V432c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V272h128v160c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48v-18.9c5 1.8 10.4 2.9 16 2.9h32c26.5 0 48-21.5 48-48v-96h24c4.4 0 8-3.6 8-8v-16c0-4.4-3.6-8-8-8zM112 384H80c-8.8 0-16-7.2-16-16V144c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v224c0 8.8-7.2 16-16 16zm112 48c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v352zm256 0c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v352zm96-64c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16V144c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v224z"
-										/>
-									</svg>
-									<figcaption>Powerlifting</figcaption>
-								</figure>
-							</li>
+
+						<ul>
+							<li>Ultimate Frisbee</li>
+							<li>Software development</li>
+							<li>Photography</li>
+							<li>Carpentry</li>
+							<li>Film theory</li>
 						</ul>
-					</section> -->
+					</section>
 				</article>
 			</section>
 
@@ -403,8 +331,9 @@
 					<p>2020–Present, Emil Anderson Group</p>
 				</header>
 				<ul>
+					<li>Contribute weekly at leadership committee alongside top executives</li>
 					<li>
-						Established internal technology services department,
+						Established and recruited internal technology services department,
 						<em>reducing ticket volume and first response time each by 70%</em> despite a 15% increase in users,
 						<em>at a net savings</em> after renegotiating MSP contracts
 					</li>
@@ -420,7 +349,7 @@
 						<em>Launched an HR Information System</em>, streamlining recruitment and enabling analytics via
 						reconstruction of 25 years of legacy ERP datasets
 					</li>
-					<li>Enhanced, automated, and improved error-checking of many client-facing reports</li>
+					<li>Enhanced, automated, and improved error-checking of many client reports</li>
 					<li>
 						Deployed <em>mobile device management</em> software, automating app deployment and device setup tasks
 					</li>
@@ -451,8 +380,8 @@
 						processing
 					</li>
 					<li>
-						Developed and/or redesigned reports using <em>Excel</em>, <em>PowerQuery</em>, <em>low-code</em> form
-						builders, <em>D3</em>, <em>pandas</em>, and other analytics technologies to assist in finance,
+						Developed and/or redesigned reports using <em>Excel</em>, <em>PowerQuery</em>,
+						<em>low-code</em> tools, <em>D3</em>, <em>pandas</em>, and other analytics tools to assist in finance,
 						equipment monitoring and maintenance, climate forecasting and storm tracking
 					</li>
 					<li>
