Revamped Nechako work experience section

--- a/index.html
+++ b/index.html
@@ -350,9 +350,7 @@
 						reconstruction of 25 years of legacy ERP datasets
 					</li>
 					<li>Enhanced, automated, and improved error-checking of many client reports</li>
-					<li>
-						Deployed <em>mobile device management</em> software, automating app deployment and device setup tasks
-					</li>
+					<li>Deployed mobile device management software, automating app deployment and device setup tasks</li>
 					<li>
 						Managed <em>migration of headquarters infrastructure</em> to new facility within a three-hour
 						scheduled migration window, with no disruption to operations
@@ -369,25 +367,24 @@
 				</ul>
 
 				<header>
-					<h2>IT Manager / Analyst / Developer</h2>
+					<h2>IT and Business Systems Manager / Developer</h2>
 					<p>2013–2020 Nechako Group of Companies</p>
 				</header>
 				<ul>
-					<li>Lead writer and team lead in bids awarded over <em>$100,000,000</em></li>
+					<li>Lead writer and team lead in bids winning over <em>$100,000,000</em></li>
+					<li>Managed safety and environmental programs and quality control tooling</li>
+					<li>
+						Developed reports using diverse business intelligence toolsets to assist in finance, equipment
+						monitoring and maintenance, climate forecasting and storm tracking
+					</li>
 					<li>
 						<em>Wrote custom desktop/mobile applications</em> to aid with work reporting, mapping, and
 						road/weather condition monitoring, which featured advanced GIS tooling, IoT hardware, and video
 						processing
 					</li>
 					<li>
-						Developed and/or redesigned reports using <em>Excel</em>, <em>PowerQuery</em>,
-						<em>low-code</em> tools, <em>D3</em>, <em>pandas</em>, and other analytics tools to assist in finance,
-						equipment monitoring and maintenance, climate forecasting and storm tracking
-					</li>
-					<li>
-						Provided all support and administration for complex 50 user environment spread across 6 remote sites
-						and 14 structures, using technologies including vSphere, Hyper-V, Active Directory, Exchange, SQL
-						Server, Veeam, DFSR, and MDM
+						Provided all support and administration for complex remote environments across six remote sites, using
+						technologies including vSphere, Hyper-V, Active Directory, Exchange, SQL Server, Veeam, and MDM
 					</li>
 				</ul>
 
@@ -396,7 +393,7 @@
 					<p>2009–2013 Nisga'a Lisims Government</p>
 				</header>
 				<ul>
-					<li><em>Independently supported over 100 users</em> across 9 locations</li>
+					<li><em>Independently supported over 100 users</em> across nine locations</li>
 					<li>Managed six-figure annual technology budget</li>
 					<li>Developed new Nisga'a citizenship database</li>
 					<!-- <li>Part of team for Nisga'a Lisims website redesign</li> -->
