Public speaking => Presentations

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 							<li>Software development</li>
 							<li>Budget management</li>
 							<li>Change management</li>
-							<li>Seminars and public speaking</li>
+							<li>Seminars and presentations</li>
 						</ul>
 					</section>
 
