--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
 					overflow: hidden;
 					--light: white;
 				}
+
 				main {
 					box-shadow: none !important;
 					height: 100vh;
 					overflow: none;
 				}
+
 				#identity img {
 					filter: saturate(1) !important;
 				}
+
 				#interests .secondary {
 					display: none;
 				}
@@ -35,28 +38,35 @@
 			* {
 				box-sizing: border-box;
 			}
+
 			body {
 				font-family: Roboto, Calibri, "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif;
 				color: var(--dark);
 				background-color: var(--light);
 			}
+
 			em {
 				font-weight: bold;
 				font-style: normal;
 			}
+
 			a {
 				text-decoration: none;
 				color: inherit;
 			}
+
 			svg {
 				fill: currentColor;
 			}
+
 			abbr[title] {
 				text-decoration: none;
 			}
+
 			figure {
 				margin: 0;
 			}
+
 			#summary header p {
 				font-style: italic;
 				margin-bottom: 0.25em;
@@ -66,6 +76,7 @@
 				filter: saturate(0);
 				transition: 0.5s ease;
 			}
+
 			#identity:hover img {
 				filter: saturate(1);
 			}
@@ -73,6 +84,7 @@
 			#contact a {
 				margin: 0.2em 0;
 			}
+
 			#contact svg {
 				height: 12pt;
 				min-width: 12pt;
@@ -84,52 +96,60 @@
 				min-width: 1.25em;
 				margin-bottom: -0.15em;
 			}
+
 			#summary p {
 				margin: 0;
 			}
+
 			#summary h2 {
 				margin: 0.75em 0 0 0;
 			}
-			#summary > h2:first-child {
+
+			#summary>h2:first-child {
 				margin: 0;
 			}
+
 			#summary h3 {
 				margin: 0.5em 0 0.15em 0;
 			}
 
 			#skills ul {
 				/* list-style: none;
-				padding: 0; */
+					padding: 0; */
 				padding: 1em 0 1em 1.5em;
 				margin: 0;
 			}
+
 			/* #skills li {
-				display: inline;
-			}
-			#skills li:not(:last-child)::after {
-				content: " • ";
-			} */
+					display: inline;
+				}
+				#skills li:not(:last-child)::after {
+					content: " • ";
+				} */
 
 			/* #interests li {
-				text-align: center;
-				display: block;
-				margin: 0.5em;
-			} */
+					text-align: center;
+					display: block;
+					margin: 0.5em;
+				} */
 
 			#interests ul {
 				list-style: none;
 				padding: 0;
 				margin-top: 0.75em;
 			}
+
 			#interests li {
 				display: inline;
 			}
+
 			#interests li:not(:last-child)::after {
 				content: " • ";
 			}
+
 			/* #interests li svg {
-				height: 2em;
-			} */
+					height: 2em;
+				} */
 
 			#references p {
 				margin-top: 0.5em;
@@ -139,10 +159,12 @@
 				margin: 1em 1em 1em 2em;
 				border-left: 2px solid var(--dark);
 			}
+
 			#career h2 {
 				margin: 0;
 				position: relative;
 			}
+
 			#career h2::after {
 				content: "";
 				width: 0.4em;
@@ -154,88 +176,78 @@
 				top: 0.28em;
 				left: -1.03em;
 			}
+
 			#career header {
 				margin-bottom: -0.75em;
 			}
+
 			#career header p {
 				margin: 0.25em 0;
 				font-weight: bold;
 				font-style: italic;
 			}
+
 			#career ul {
 				margin: 1em 0 1.2em 0;
 				padding-left: 1.5em;
 			}
+
 			#career ul:last-child {
 				margin-bottom: 0;
 			}
+
 			#career li {
 				margin: 0.5em 0;
 			}
 		</style>
 
 		<svg style="display: none" viewBox="0 0 640 512">
-			<path
-				id="graduation"
-				d="M622.34 153.2L343.4 67.5c-15.2-4.67-31.6-4.67-46.79 0L17.66 153.2c-23.54 7.23-23.54 38.36 0 45.59l48.63 14.94c-10.67 13.19-17.23 29.28-17.88 46.9C38.78 266.15 32 276.11 32 288c0 10.78 5.68 19.85 13.86 25.65L20.33 428.53C18.11 438.52 25.71 448 35.94 448h56.11c10.24 0 17.84-9.48 15.62-19.47L82.14 313.65C90.32 307.85 96 298.78 96 288c0-11.57-6.47-21.25-15.66-26.87.76-15.02 8.44-28.3 20.69-36.72L296.6 284.5c9.06 2.78 26.44 6.25 46.79 0l278.95-85.7c23.55-7.24 23.55-38.36 0-45.6zM352.79 315.09c-28.53 8.76-52.84 3.92-65.59 0l-145.02-44.55L128 384c0 35.35 85.96 64 192 64s192-28.65 192-64l-14.18-113.47-145.03 44.56z"
-			/>
+			<path id="graduation"
+				d="M622.34 153.2L343.4 67.5c-15.2-4.67-31.6-4.67-46.79 0L17.66 153.2c-23.54 7.23-23.54 38.36 0 45.59l48.63 14.94c-10.67 13.19-17.23 29.28-17.88 46.9C38.78 266.15 32 276.11 32 288c0 10.78 5.68 19.85 13.86 25.65L20.33 428.53C18.11 438.52 25.71 448 35.94 448h56.11c10.24 0 17.84-9.48 15.62-19.47L82.14 313.65C90.32 307.85 96 298.78 96 288c0-11.57-6.47-21.25-15.66-26.87.76-15.02 8.44-28.3 20.69-36.72L296.6 284.5c9.06 2.78 26.44 6.25 46.79 0l278.95-85.7c23.55-7.24 23.55-38.36 0-45.6zM352.79 315.09c-28.53 8.76-52.84 3.92-65.59 0l-145.02-44.55L128 384c0 35.35 85.96 64 192 64s192-28.65 192-64l-14.18-113.47-145.03 44.56z" />
 		</svg>
 	</head>
+
 	<body>
-		<main
-			style="
-				display: flex;
-				font-size: smaller;
-				max-width: 800px;
-				margin: 0 auto;
-				box-shadow: var(--dark) 0em 0em 2em;
-				min-height: 100vh;
-			"
-		>
+		<main style="
+					display: flex;
+					font-size: smaller;
+					max-width: 800px;
+					margin: 0 auto;
+					box-shadow: var(--dark) 0em 0em 2em;
+					min-height: 100vh;
+				">
 			<section id="summary" style="width: 35vw; padding: 1em; background-color: var(--dark); color: var(--light)">
 				<header>
 					<section id="identity" style="text-align: center">
-						<img
-							id="headershot"
-							src="headshot.jpg"
-							alt="Benjamin Davidson Portrait"
-							width="128"
-							height="128"
-							style="border: 2px solid var(--light); border-radius: 50%; margin: 1em"
-						/>
+						<img id="headershot" src="headshot.jpg" alt="Benjamin Davidson Portrait" width="128" height="128"
+							style="border: 2px solid var(--light); border-radius: 50%; margin: 1em" />
 						<h1 style="text-transform: uppercase; margin: 0.25em auto">Benjamin Davidson</h1>
 						<p style="margin: 1em">
 							Versatile leader with 20 years of IT experience spanning development, systems administration,
 							business intelligence, and management
 						</p>
 
-						<section
-							id="contact"
-							style="display: inline-block; text-align: left; margin: 0.25em auto; white-space: nowrap"
-						>
+						<section id="contact"
+							style="display: inline-block; text-align: left; margin: 0.25em auto; white-space: nowrap">
 							<div style="display: flex; flex-direction: column; gap: 0.35em">
 								<a href="tel:2506412363">
 									<svg viewBox="0 0 512 512">
 										<path
-											d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
-										/>
+											d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z" />
 									</svg>
 									250-641-<abbr title="Benjamin Davidson">BEND</abbr> (2363)
 								</a>
 								<a href="mailto:ben.davidson@gmail.com">
 									<svg viewBox="0 0 512 512">
 										<path
-											d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
-										/>
+											d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z" />
 									</svg>
 									ben.davidson@gmail.com
 								</a>
 								<a target="_blank" href="https://www.google.com/maps/place/Terrace,+BC/">
 									<svg viewBox="0 0 512 512">
-										<path
-											transform="translate(64,0)"
-											d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
-										/>
+										<path transform="translate(64,0)"
+											d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z" />
 									</svg>
 									Terrace, BC
 								</a>
@@ -249,8 +261,7 @@
 						<h2>
 							<svg viewBox="0 0 512 512">
 								<path
-									d="M501.1 395.7L384 278.6c-23.1-23.1-57.6-27.6-85.4-13.9L192 158.1V96L64 0 0 64l96 128h62.1l106.6 106.6c-13.6 27.8-9.2 62.3 13.9 85.4l117.1 117.1c14.6 14.6 38.2 14.6 52.7 0l52.7-52.7c14.5-14.6 14.5-38.2 0-52.7zM331.7 225c28.3 0 54.9 11 74.9 31l19.4 19.4c15.8-6.9 30.8-16.5 43.8-29.5 37.1-37.1 49.7-89.3 37.9-136.7-2.2-9-13.5-12.1-20.1-5.5l-74.4 74.4-67.9-11.3L334 98.9l74.4-74.4c6.6-6.6 3.4-17.9-5.7-20.2-47.4-11.7-99.6.9-136.6 37.9-28.5 28.5-41.9 66.1-41.2 103.6l82.1 82.1c8.1-1.9 16.5-2.9 24.7-2.9zm-103.9 82l-56.7-56.7L18.7 402.8c-25 25-25 65.5 0 90.5s65.5 25 90.5 0l123.6-123.6c-7.6-19.9-9.9-41.6-5-62.7zM64 472c-13.2 0-24-10.8-24-24 0-13.3 10.7-24 24-24s24 10.7 24 24c0 13.2-10.7 24-24 24z"
-								/>
+									d="M501.1 395.7L384 278.6c-23.1-23.1-57.6-27.6-85.4-13.9L192 158.1V96L64 0 0 64l96 128h62.1l106.6 106.6c-13.6 27.8-9.2 62.3 13.9 85.4l117.1 117.1c14.6 14.6 38.2 14.6 52.7 0l52.7-52.7c14.5-14.6 14.5-38.2 0-52.7zM331.7 225c28.3 0 54.9 11 74.9 31l19.4 19.4c15.8-6.9 30.8-16.5 43.8-29.5 37.1-37.1 49.7-89.3 37.9-136.7-2.2-9-13.5-12.1-20.1-5.5l-74.4 74.4-67.9-11.3L334 98.9l74.4-74.4c6.6-6.6 3.4-17.9-5.7-20.2-47.4-11.7-99.6.9-136.6 37.9-28.5 28.5-41.9 66.1-41.2 103.6l82.1 82.1c8.1-1.9 16.5-2.9 24.7-2.9zm-103.9 82l-56.7-56.7L18.7 402.8c-25 25-25 65.5 0 90.5s65.5 25 90.5 0l123.6-123.6c-7.6-19.9-9.9-41.6-5-62.7zM64 472c-13.2 0-24-10.8-24-24 0-13.3 10.7-24 24-24s24 10.7 24 24c0 13.2-10.7 24-24 24z" />
 							</svg>
 							Skills
 						</h2>
@@ -277,10 +288,8 @@
 					<section id="education">
 						<h2>
 							<svg viewBox="0 0 640 512">
-								<path
-									id="graduation"
-									d="M622.34 153.2L343.4 67.5c-15.2-4.67-31.6-4.67-46.79 0L17.66 153.2c-23.54 7.23-23.54 38.36 0 45.59l48.63 14.94c-10.67 13.19-17.23 29.28-17.88 46.9C38.78 266.15 32 276.11 32 288c0 10.78 5.68 19.85 13.86 25.65L20.33 428.53C18.11 438.52 25.71 448 35.94 448h56.11c10.24 0 17.84-9.48 15.62-19.47L82.14 313.65C90.32 307.85 96 298.78 96 288c0-11.57-6.47-21.25-15.66-26.87.76-15.02 8.44-28.3 20.69-36.72L296.6 284.5c9.06 2.78 26.44 6.25 46.79 0l278.95-85.7c23.55-7.24 23.55-38.36 0-45.6zM352.79 315.09c-28.53 8.76-52.84 3.92-65.59 0l-145.02-44.55L128 384c0 35.35 85.96 64 192 64s192-28.65 192-64l-14.18-113.47-145.03 44.56z"
-								/>
+								<path id="graduation"
+									d="M622.34 153.2L343.4 67.5c-15.2-4.67-31.6-4.67-46.79 0L17.66 153.2c-23.54 7.23-23.54 38.36 0 45.59l48.63 14.94c-10.67 13.19-17.23 29.28-17.88 46.9C38.78 266.15 32 276.11 32 288c0 10.78 5.68 19.85 13.86 25.65L20.33 428.53C18.11 438.52 25.71 448 35.94 448h56.11c10.24 0 17.84-9.48 15.62-19.47L82.14 313.65C90.32 307.85 96 298.78 96 288c0-11.57-6.47-21.25-15.66-26.87.76-15.02 8.44-28.3 20.69-36.72L296.6 284.5c9.06 2.78 26.44 6.25 46.79 0l278.95-85.7c23.55-7.24 23.55-38.36 0-45.6zM352.79 315.09c-28.53 8.76-52.84 3.92-65.59 0l-145.02-44.55L128 384c0 35.35 85.96 64 192 64s192-28.65 192-64l-14.18-113.47-145.03 44.56z" />
 							</svg>
 							Education
 						</h2>
@@ -308,8 +317,7 @@
 						<h2>
 							<svg viewBox="0 0 320 512">
 								<path
-									d="M311.16 459.58L288 448v-16a16 16 0 0 0-16-16H48a16 16 0 0 0-16 16v16L8.85 459.58A16 16 0 0 0 0 473.89V496a16 16 0 0 0 16 16h288a16 16 0 0 0 16-16v-22.11a16 16 0 0 0-8.84-14.31zM45.55 235.52l28.83 12.86a22.59 22.59 0 0 0 17.67.34l9.09-3.65a22.79 22.79 0 0 0 13.33-14.62l6.53-21.87a17.09 17.09 0 0 1 8.92-11.15l14.2-5.43v37.21a28.58 28.58 0 0 1-16.9 26.09L80.68 279C40.87 299.22 32.42 352.42 64 384h192c7-7.85 16-18.31 16-32V203.16C272 126.62 209.38 64 132.84 64H40.52A8.54 8.54 0 0 0 32 72.56 12.14 12.14 0 0 0 33.27 78l10.1 20.28-6.37 6.35a17.21 17.21 0 0 0-5 12.11v97.9a22.86 22.86 0 0 0 13.55 20.88zM80.07 128a16 16 0 1 1-15.94 16 16 16 0 0 1 15.94-16z"
-								/>
+									d="M311.16 459.58L288 448v-16a16 16 0 0 0-16-16H48a16 16 0 0 0-16 16v16L8.85 459.58A16 16 0 0 0 0 473.89V496a16 16 0 0 0 16 16h288a16 16 0 0 0 16-16v-22.11a16 16 0 0 0-8.84-14.31zM45.55 235.52l28.83 12.86a22.59 22.59 0 0 0 17.67.34l9.09-3.65a22.79 22.79 0 0 0 13.33-14.62l6.53-21.87a17.09 17.09 0 0 1 8.92-11.15l14.2-5.43v37.21a28.58 28.58 0 0 1-16.9 26.09L80.68 279C40.87 299.22 32.42 352.42 64 384h192c7-7.85 16-18.31 16-32V203.16C272 126.62 209.38 64 132.84 64H40.52A8.54 8.54 0 0 0 32 72.56 12.14 12.14 0 0 0 33.27 78l10.1 20.28-6.37 6.35a17.21 17.21 0 0 0-5 12.11v97.9a22.86 22.86 0 0 0 13.55 20.88zM80.07 128a16 16 0 1 1-15.94 16 16 16 0 0 1 15.94-16z" />
 							</svg>
 							Interests
 						</h2>
@@ -403,14 +411,14 @@
 				</ul>
 
 				<!-- <header>
-					<h2>IT Consultant / Web Developer</h2>
-					<p>2006–2008 TheBenD Software Solutions</p>
-				</header>
-				<ul>
-					<li>
-						Produced websites, small applications, office templates and marketing materials for small businesses
-					</li>
-				</ul> -->
+						<h2>IT Consultant / Web Developer</h2>
+						<p>2006–2008 TheBenD Software Solutions</p>
+					</header>
+					<ul>
+						<li>
+							Produced websites, small applications, office templates and marketing materials for small businesses
+						</li>
+					</ul> -->
 
 				<header>
 					<h2>Systems Administrator, Web Developer</h2>
