--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
 						</h2>
 
 						<ul>
-							<li>Ultimate Frisbee</li>
 							<li>Software development</li>
+							<li>Ultimate Frisbee</li>
 							<li>Photography</li>
 							<li>Carpentry</li>
 							<li>Film theory</li>
@@ -357,7 +357,10 @@
 						<em>Launched an HR Information System</em>, streamlining recruitment and enabling analytics via
 						reconstruction of 25 years of legacy ERP datasets
 					</li>
-					<li>Enhanced, automated, and improved error-checking of many client reports</li>
+					<li>
+						Established robust <em>data warehouse</em>, enhancing data sanitazation, sychronization, and
+						reporting
+					</li>
 					<li>Deployed mobile device management software, automating app deployment and device setup tasks</li>
 					<li>
 						Managed <em>migration of headquarters infrastructure</em> to new facility within a three-hour
@@ -382,7 +385,7 @@
 					<li>Lead writer and team lead in bids winning over <em>$100,000,000</em></li>
 					<li>Managed safety and environmental programs and quality control tooling</li>
 					<li>
-						Developed reports using diverse business intelligence toolsets to assist in finance, equipment
+						Utilized various business intelligence tools to assist in finance, equipment
 						monitoring and maintenance, climate forecasting and storm tracking
 					</li>
 					<li>
@@ -391,8 +394,8 @@
 						processing
 					</li>
 					<li>
-						Provided all support and administration for complex remote environments across six remote sites, using
-						technologies including vSphere, Hyper-V, Active Directory, Exchange, SQL Server, Veeam, and MDM
+						Provided all support and administration for complex remote environments across six remote sites,
+						using technologies including vSphere, Hyper-V, Active Directory, Exchange, SQL Server, Veeam, and MDM
 					</li>
 				</ul>
 
@@ -406,7 +409,7 @@
 					<li>Developed new Nisga'a citizenship database</li>
 					<!-- <li>Part of team for Nisga'a Lisims website redesign</li> -->
 					<li>Virtualized and upgraded servers</li>
-					<li>Transitioned desktops to Windows 7</li>
+					<li>Transitioned workstations to Windows 7</li>
 					<li>Lead rewiring of headquarters' ethernet</li>
 				</ul>
 
